@@ -6,6 +6,8 @@ BEFORE NEXT RELEASE
 
 GENERAL   
 
+* do without SK_UNKNOWN (post 9 dec 2006 by smcpeak on oink-devel)
+
 
 * elsa merge plan:
   - renamings varValue, sta_value, CType
