@@ -1,3 +1,8 @@
+2006-12-17  Hendrik Tews  <tews@tandem.cs.ru.nl>
+
+	* scope added in all asttool code
+	* regression test run
+
 2006-12-13  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
 	* deleted old check-oast
